// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rendered output is frozen > day email: conflict in both sections 1`] = `
"# End-of-day evaluation summary: Psalms Workshop

Hi all,

Here are the highlights and growth areas for 2026-06-29, drawn from the facilitator observations captured today. These are draft 0–3 designations meant as input to a human judgment, not final scores. Where more than one of us evaluated the same participant, the summary notes whether we agreed or need to reconcile.

## CIT One (Team A)

**Highlights to encourage**
- Strong work on Genre Theory (strong, 3/3).
  - josh rated 3/3: did a thing
    > "quote"

**Needs reconciliation**
- Genre Theory: evaluators conflicted here (scores ranged 1–3). Flagged for review before this is finalized.
  - josh rated 3/3: did a thing
    > "quote"
  - boss rated 1/3: did a thing
    > "quote"

**Recommended follow-up:** A short mentoring conversation tomorrow to work through the growth area(s) above, agree on specific next steps, and note how the feedback is received.

_Verification: 0/2 verified, 2 pending (needs 2 confirmations each); not yet cleared to finalize._

## CIT Two

**Growth areas**
- Checking: not yet demonstrated (0/3).
  - an evaluator rated 0/3 [group observation]: did a thing

**Recommended follow-up:** A short mentoring conversation tomorrow to work through the growth area(s) above, agree on specific next steps, and note how the feedback is received.

_Verification: 0/1 verified, 1 pending (needs 2 confirmations each); not yet cleared to finalize._

Thanks,
Josh"
`;

exports[`rendered output is frozen > day email: empty day 1`] = `
"# End-of-day evaluation summary: Psalms Workshop

Hi all,

Here are the highlights and growth areas for 2026-06-29, drawn from the facilitator observations captured today. These are draft 0–3 designations meant as input to a human judgment, not final scores. Where more than one of us evaluated the same participant, the summary notes whether we agreed or need to reconcile.

No observations have been recorded yet today. Once captures are routed, this summary will fill in per participant.

Thanks,
Josh"
`;

exports[`rendered output is frozen > day email: flagged items and no sign-off 1`] = `
"# End-of-day evaluation summary: Psalms Workshop

Hi all,

Here are the highlights and growth areas for 2026-06-29, drawn from the facilitator observations captured today. These are draft 0–3 designations meant as input to a human judgment, not final scores. Where more than one of us evaluated the same participant, the summary notes whether we agreed or need to reconcile.

## CIT One (Team A)

**Highlights to encourage**
- Strong work on Checking (strong, 3/3).
  - josh rated 3/3 (adjusted from 2): did a thing
    > "quote"

_Verification: 1/2 verified, 1 pending (needs 2 confirmations each); not yet cleared to finalize._
"
`;

exports[`rendered output is frozen > day email: gate locked 1`] = `
"# End-of-day evaluation summary: Psalms Workshop

Hi all,

Here are the highlights and growth areas for 2026-06-29, drawn from the facilitator observations captured today. These are draft 0–3 designations meant as input to a human judgment, not final scores. Where more than one of us evaluated the same participant, the summary notes whether we agreed or need to reconcile.

## CIT One (Team A)

**Highlights to encourage**
- Strong work on Facilitation (competent, 2/3).
  - ruth rated 2/3: did a thing
    > "quote"

**Growth areas**
- Checking: emerging (1/3).
  - josh rated 1/3: did a thing
    > "quote"

**Recommended follow-up:** A short mentoring conversation tomorrow to work through the growth area(s) above, agree on specific next steps, and note how the feedback is received.

_Verification: 0/2 verified, 2 pending (needs 2 confirmations each); not yet cleared to finalize._

Thanks,
Josh"
`;

exports[`rendered output is frozen > day email: one highlight 1`] = `
"# End-of-day evaluation summary: Psalms Workshop

Hi team,

Here are the highlights and growth areas for 2026-06-29, drawn from the facilitator observations captured today. These are draft 0–3 designations meant as input to a human judgment, not final scores. Where more than one of us evaluated the same participant, the summary notes whether we agreed or need to reconcile.

## CIT One (Team A)

**Highlights to encourage**
- Strong work on Genre Theory (strong, 3/3).
  - josh rated 3/3: Named the genre and defended it
    > "This is a lament, and here is why"

_Verification: 0/1 verified, 1 pending (needs 2 confirmations each); not yet cleared to finalize._

Thanks,
Josh"
`;

exports[`rendered output is frozen > participant report: conflict in both sections 1`] = `
[
  "# Participant evaluation: CIT One

Psalms Workshop, Team A. Draft evidence summary generated 2026-06-29 from facilitator observations. Numbers are draft 0–3 designations and the evidence levels behind them are still being finalized, so treat this as input to a human judgment rather than a final score.

Evidence has been recorded against 1 of 3 competency areas.

## Evidence by competency area

### GENRE: Genre Theory

**Designation: 3/3 (strong).** (recorded evidence ranged 1–3) This KSA shows conflicting evidence and should be reviewed before it is finalized.

- 3/3: did a thing
  > "quote"
- 1/3: did a thing
  > "quote"

### Competency areas without evidence yet

No observations have been recorded for: CHECK (Checking); FACIL (Facilitation).

## CBC competency mapping

Draft designations grouped by the CBC sub-points each competency area feeds, as a starting point for the eventual CBC submission.

- **1.2 Exegesis**: GENRE 3/3, CHECK (no evidence)
- **2.4 Team**: FACIL (no evidence)
- **3.1 Quality**: CHECK (no evidence)
",
  "# Participant evaluation: CIT Two

Psalms Workshop. Draft evidence summary generated 2026-06-29 from facilitator observations. Numbers are draft 0–3 designations and the evidence levels behind them are still being finalized, so treat this as input to a human judgment rather than a final score.

Evidence has been recorded against 1 of 3 competency areas.

## Evidence by competency area

### CHECK: Checking

**Designation: 0/3 (not yet demonstrated).**

- 0/3 [group observation]: did a thing

### Competency areas without evidence yet

No observations have been recorded for: GENRE (Genre Theory); FACIL (Facilitation).

## CBC competency mapping

Draft designations grouped by the CBC sub-points each competency area feeds, as a starting point for the eventual CBC submission.

- **1.2 Exegesis**: GENRE (no evidence), CHECK 0/3
- **2.4 Team**: FACIL (no evidence)
- **3.1 Quality**: CHECK 0/3
",
]
`;

exports[`rendered output is frozen > participant report: empty day 1`] = `
[
  "# Participant evaluation: CIT One

Psalms Workshop, Team A. Draft evidence summary generated 2026-06-29 from facilitator observations. Numbers are draft 0–3 designations and the evidence levels behind them are still being finalized, so treat this as input to a human judgment rather than a final score.

Evidence has been recorded against 0 of 3 competency areas.

## Evidence by competency area

No counting evidence has been recorded for this participant yet.

### Competency areas without evidence yet

No observations have been recorded for: GENRE (Genre Theory); CHECK (Checking); FACIL (Facilitation).

## CBC competency mapping

Draft designations grouped by the CBC sub-points each competency area feeds, as a starting point for the eventual CBC submission.

- **1.2 Exegesis**: GENRE (no evidence), CHECK (no evidence)
- **2.4 Team**: FACIL (no evidence)
- **3.1 Quality**: CHECK (no evidence)
",
]
`;

exports[`rendered output is frozen > participant report: flagged items and no sign-off 1`] = `
[
  "# Participant evaluation: CIT One

Psalms Workshop, Team A. Draft evidence summary generated 2026-06-29 from facilitator observations. Numbers are draft 0–3 designations and the evidence levels behind them are still being finalized, so treat this as input to a human judgment rather than a final score.

Evidence has been recorded against 1 of 3 competency areas, with 1 item(s) flagged for review.

## Evidence by competency area

### CHECK: Checking

**Designation: 3/3 (strong).**

- 3/3 (adjusted from 2): did a thing
  > "quote"

### Competency areas without evidence yet

No observations have been recorded for: GENRE (Genre Theory); FACIL (Facilitation).

## Items flagged for review

These observations need a human decision before they count toward a designation, because the participant was ambiguous, the competency mapping was a stretch, or the evidence was too thin to rate.

- **GENRE**: did a thing (low confidence)
  > "quote"

## CBC competency mapping

Draft designations grouped by the CBC sub-points each competency area feeds, as a starting point for the eventual CBC submission.

- **1.2 Exegesis**: GENRE (no evidence), CHECK 3/3
- **2.4 Team**: FACIL (no evidence)
- **3.1 Quality**: CHECK 3/3
",
]
`;

exports[`rendered output is frozen > participant report: gate locked 1`] = `
[
  "# Participant evaluation: CIT One

Psalms Workshop, Team A. Draft evidence summary generated 2026-06-29 from facilitator observations. Numbers are draft 0–3 designations and the evidence levels behind them are still being finalized, so treat this as input to a human judgment rather than a final score.

**Verification status.** Not yet verified: 0 of 2 observations confirmed (needs 2 evaluators each), 2 pending. This report is locked until those are resolved.

Evidence has been recorded against 2 of 3 competency areas.

## Evidence by competency area

### CHECK: Checking

**Designation: 1/3 (emerging).**

- 1/3: did a thing
  > "quote"

### FACIL: Facilitation

**Designation: 2/3 (competent).**

- 2/3: did a thing
  > "quote"

### Competency areas without evidence yet

No observations have been recorded for: GENRE (Genre Theory).

## CBC competency mapping

Draft designations grouped by the CBC sub-points each competency area feeds, as a starting point for the eventual CBC submission.

- **1.2 Exegesis**: GENRE (no evidence), CHECK 1/3
- **2.4 Team**: FACIL 2/3
- **3.1 Quality**: CHECK 1/3
",
]
`;

exports[`rendered output is frozen > participant report: one highlight 1`] = `
[
  "# Participant evaluation: CIT One

Psalms Workshop, Team A. Draft evidence summary generated 2026-06-29 from facilitator observations. Numbers are draft 0–3 designations and the evidence levels behind them are still being finalized, so treat this as input to a human judgment rather than a final score.

Evidence has been recorded against 1 of 3 competency areas.

## Evidence by competency area

### GENRE: Genre Theory

**Designation: 3/3 (strong).**

- 3/3: Named the genre and defended it
  > "This is a lament, and here is why"

### Competency areas without evidence yet

No observations have been recorded for: CHECK (Checking); FACIL (Facilitation).

## CBC competency mapping

Draft designations grouped by the CBC sub-points each competency area feeds, as a starting point for the eventual CBC submission.

- **1.2 Exegesis**: GENRE 3/3, CHECK (no evidence)
- **2.4 Team**: FACIL (no evidence)
- **3.1 Quality**: CHECK (no evidence)
",
]
`;
